feature: load exericises/ load pdf/ create comment/ update mark

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^7.0.2",
     "@mui/material": "^7.0.1",
     "@radix-ui/react-select": "^2.1.6",
     "@shadcn/ui": "^0.0.4",
@@ -25,6 +26,7 @@
     "clsx": "^2.1.1",
     "eslint-config-react-app": "^7.0.1",
     "lucide-react": "^0.487.0",
+    "pdfjs-dist": "2.10.377",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
