--- a/package.json
+++ b/package.json
@@ -16,18 +16,17 @@
     "@mui/material": "^7.0.1",
     "@radix-ui/react-select": "^2.1.6",
     "@shadcn/ui": "^0.0.4",
-    "@tailwindcss/postcss": "^4.1.1",
+    "@tailwindcss/postcss": "^4.1.3",
     "@tailwindcss/vite": "^4.1.1",
     "@tanstack/react-query": "^5.71.3",
     "@tanstack/react-query-devtools": "^5.71.3",
-    "autoprefixer": "^10.4.21",
     "axios": "^1.8.4",
+    "axios-retry": "^4.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "eslint-config-react-app": "^7.0.1",
     "lucide-react": "^0.487.0",
     "pdfjs-dist": "2.10.377",
-    "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
@@ -36,7 +35,6 @@
     "react-router-dom": "^7.4.1",
     "styled-components": "^6.1.16",
     "tailwind-merge": "^3.1.0",
-    "tailwindcss": "^4.1.1",
     "tw-animate-css": "^1.2.5"
   },
   "devDependencies": {
